--- a/rest_api/Dockerfile-installed
+++ b/rest_api/Dockerfile-installed
@@ -11,6 +11,8 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+#
+#Code adapted by Karan Kajani from https://github.com/hyperledger-archives/sawtooth-marketplace.git
 # -----------------------------------------------------------------------------
 
 FROM ubuntu:16.04
@@ -20,7 +22,7 @@ RUN echo "deb apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 
     apt-get update && \
     apt-get install -y --allow-unauthenticated -q python3-grpcio-tools=1.1.3-1 \
         python3-pip \
-	python3-cffi
+	python3-cffi \
         python3-sawtooth-sdk \
         python3-sawtooth-rest-api
 
